changed the border color to the ingredients

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -98,7 +98,7 @@ ul#drinks-list img.thumbnail {
   font-size: 20 px;
 }
 #card-border {
-  border: 1px solid lightslategrey;
+  border: 1px solid white;
   text-align: center;
 }
 #drink-fonti {
