tidying up some files

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: cocktail;
-  src: url(../assets/img/Cocktail\ Script.ttf);
+  src: url(../assets/Cocktail\ Script.ttf);
 }
 
 .navbar {
