--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,7 @@
   {{!-- Nav Bar --}}
   <nav class="navbar navbar-dark bg-dark">
     <h3 class="my-0 mr-md-auto text-light font-weight-normal"><a class="navbar-brand" href="#" style="max-width: 14%;">
-    <img src="assets/img/CosmicCocktails.png" class="img-fluid">
- </a></h3>
+    <img src="../assets/img/CosmicCocktails.png" class="img-fluid"></a></h3>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-light" href="/">Home</a>
       <a class="p-2 text-light" href="/favorites">Favorites</a>
